# ai-baby-monitor

./: .dockerignore  .env.template  .gitignore  Dockerfile.python  LICENSE  README.md  camera_stream.py  docker-compose.yml  inference.py  main.py  pyproject.toml  stream_to_redis.py  streamlit_viewer.py
ai_baby_monitor/: __init__.py  camera_stream.py  instructions.py  watcher.py
ai_baby_monitor/stream/: camera_stream.py  redis_stream.py
configs/: bedroom.yaml  living_room.yaml
scripts/: run_watcher.py  stream_to_redis.py  streamlit_viewer.py
src/ai_baby_monitor/: __init__.py  watcher.py
src/ai_baby_monitor/config/: __init__.py  utils.py
src/ai_baby_monitor/stream/: __init__.py  camera_stream.py  redis_stream.py
src/ai_baby_monitor/ui/: __init__.py  streamlit_components.py
src/ai_baby_monitor/watcher/: __init__.py  base_prompt.py  watcher.py
tests/: test_config_loader.py
tests/configs/: test_config_loader.py
tests/stream/: test_camera_stream.py  test_redis_stream.py
tests/watcher/: test_watcher.py
