[project]
name = "ai-baby-monitor"
version = "0.1.0"
description = "Simple baby monitor running on Video LLMs"
readme = "README.md"
authors = [
    { name = "zeenolife", email = "almaz.zinollayev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.1.0",
    "opencv-python>=4.11.0.86",
    "redis>=5.2.1",
    "streamlit>=1.42.2",
    "vllm>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
