[project]
name = "ai-baby-monitor"
version = "0.1.0"
description = "Simple baby monitor running on Video LLMs"
readme = "README.md"
authors = [
    { name = "zeenolife", email = "almaz.zinollayev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pip>=25.0.1",
    "redis>=5.2.1",
    "setuptools>=75.8.2",
    "streamlit>=1.42.2",
    "structlog>=25.2.0",
    "vllm>=0.8.2",
    "wheel>=0.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
